add media module

--- a/media/build.gradle
+++ b/media/build.gradle
@@ -1,7 +1,5 @@
-apply plugin: 'com.android.application'
-
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
 apply from: file('../libs.gradle')
@@ -10,20 +8,25 @@ def ext = rootProject.ext
 android {
     compileSdkVersion ext.compileSdkVersion
     buildToolsVersion "29.0.2"
+
+
     defaultConfig {
-        applicationId "com.engineer.android.multimedia"
         minSdkVersion ext.minSdkVersion
         targetSdkVersion ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles 'consumer-rules.pro'
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -31,14 +34,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:${ext.appcompat}"
     implementation "androidx.core:core-ktx:${ext.core_ktx}"
-    implementation "androidx.constraintlayout:constraintlayout:${ext.constraintlayout}"
 
-
-
+    // unit test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-    // sub module
-    implementation project(path: ':media')
+    // unit test
 }
