--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,16 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:${ext.constraintlayout}"
 
 
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    //test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // test
 
     // sub module
     implementation project(path: ':media')
+    implementation project(path: ':creator')
 }
