--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'commons-io:commons-io:2.6'
+//    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 }
