--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
 
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
     implementation 'com.zhihu.android:matisse:0.5.3-beta2'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'commons-io:commons-io:2.6'
 //    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+    implementation 'com.exozet:transcoder:1.5.1'
 }
