--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        maven { url 'https://dl.bintray.com/exozetag/maven' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${gradle_version}"
@@ -21,7 +21,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven { url 'https://dl.bintray.com/exozetag/maven' }
     }
 }
 
