--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     implementation 'commons-io:commons-io:2.6'
 //    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation 'com.exozet:transcoder:1.5.1'
+//    implementation 'com.alibaba:fastjson:1.2.60'
 }
