--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'commons-io:commons-io:2.6'
-//    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation 'com.exozet:transcoder:1.5.1'
-//    implementation 'com.alibaba:fastjson:1.2.60'
+    implementation 'com.alibaba:fastjson:1.2.60'
+    implementation 'cn.jzvd:jiaozivideoplayer:7.0.5'
+    implementation 'com.moos:Material-ProgressView:1.0.6'
 }
