--- a/libs.gradle
+++ b/libs.gradle
@@ -4,10 +4,10 @@ ext {
     constraintlayout = "1.1.3"
 
     kotlin_version = "1.3.50"
-    gradle_version = "3.5.0"
+    gradle_version = '3.5.2'
 
 
-    compileSdkVersion = 29
+    compileSdkVersion = 28
     minSdkVersion = 24
-    targetSdkVersion = 29
+    targetSdkVersion = 28
 }
