--- a/libs.gradle
+++ b/libs.gradle
@@ -1,13 +1,13 @@
 ext {
-    core_ktx = "1.1.0"
-    appcompat = "1.1.0"
-    constraintlayout = "1.1.3"
+    core_ktx = "1.3.1"
+    appcompat = "1.2.0"
+    constraintlayout = "2.0.4"
 
-    kotlin_version = "1.3.50"
-    gradle_version = '3.5.2'
+    kotlin_version = "1.4.21"
+    gradle_version = "4.1.0"
 
 
-    compileSdkVersion = 28
+    compileSdkVersion = 29
     minSdkVersion = 24
-    targetSdkVersion = 28
+    targetSdkVersion = 29
 }
