--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ def ext = rootProject.ext
 
 android {
     compileSdkVersion ext.compileSdkVersion
-    buildToolsVersion "29.0.2"
+    buildToolsVersion ext.buildToolsVersion
     defaultConfig {
         applicationId "com.engineer.android.multimedia"
         minSdkVersion ext.minSdkVersion
@@ -47,19 +47,18 @@ dependencies {
     implementation "androidx.appcompat:appcompat:${ext.appcompat}"
     implementation "androidx.core:core-ktx:${ext.core_ktx}"
     implementation "androidx.constraintlayout:constraintlayout:${ext.constraintlayout}"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
 
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
-    implementation 'com.zhihu.android:matisse:0.5.3-beta2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+    implementation 'com.zhihu.android:matisse:0.5.3-beta3'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'commons-io:commons-io:2.6'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'commons-io:commons-io:20030203.000550'
     implementation 'com.exozet:transcoder:1.5.1'
-    implementation 'com.alibaba:fastjson:1.2.60'
+    implementation 'com.alibaba:fastjson:1.2.66'
     implementation 'cn.jzvd:jiaozivideoplayer:7.0.5'
     implementation 'com.moos:Material-ProgressView:1.0.6'
 }
