--- a/libs.gradle
+++ b/libs.gradle
@@ -1,13 +1,14 @@
 ext {
-    core_ktx = "1.3.1"
+    core_ktx = "1.3.2"
     appcompat = "1.2.0"
     constraintlayout = "2.0.4"
 
     kotlin_version = "1.4.21"
-    gradle_version = "4.1.0"
+    gradle_version = '4.1.2'
 
 
-    compileSdkVersion = 29
+    compileSdkVersion = 30
+    buildToolsVersion = "30.0.2"
     minSdkVersion = 24
     targetSdkVersion = 29
 }
