--- a/media/build.gradle
+++ b/media/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.appcompat:appcompat:${ext.appcompat}"
     implementation "androidx.core:core-ktx:${ext.core_ktx}"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     // unit test
     testImplementation 'junit:junit:4.12'
