--- a/media/src/main/AndroidManifest.xml
+++ b/media/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.engineer.android.media">
 
     <application>
-        <activity android:name=".ui.SimpleMediaPlayerActivity"></activity>
+        <activity android:name=".ui.SimpleCodecActivity"></activity>
+        <activity android:name=".ui.SimpleMediaPlayerActivity" />
     </application>
 
 </manifest>
