--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         ndk {
-            abiFilters 'arm64-v8a'
+            abiFilters 'armeabi-v7a'
         }
     }
     buildTypes {
@@ -35,10 +35,6 @@ android {
     buildFeatures {
         viewBinding true
     }
-
-//    packagingOptions {
-//        pickFirst 'lib/*/libavutil.so'
-//    }
 }
 
 dependencies {
