--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ def ext = rootProject.ext
 
 android {
     compileSdkVersion ext.compileSdkVersion
-    buildToolsVersion ext.buildToolsVersion
 
     defaultConfig {
         applicationId "com.engineer.android.multimedia"
@@ -41,8 +40,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //test
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     // test
 
     // sub module
@@ -60,10 +59,10 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'com.zhihu.android:matisse:0.5.3-beta3'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'commons-io:commons-io:20030203.000550'
-    implementation 'com.exozet:transcoder:1.5.1'
+//    implementation 'com.exozet:transcoder:1.5.1'
     implementation 'com.alibaba:fastjson:1.2.66'
     implementation 'cn.jzvd:jiaozivideoplayer:7.0.5'
     implementation 'com.moos:Material-ProgressView:1.0.6'
