--- a/libs.gradle
+++ b/libs.gradle
@@ -1,14 +1,13 @@
 ext {
-    core_ktx = "1.3.2"
-    appcompat = "1.2.0"
+    core_ktx = '1.6.0'
+    appcompat = '1.3.0'
     constraintlayout = "2.0.4"
 
-    kotlin_version = "1.4.30"
-    gradle_version = '4.1.2'
+    kotlin_version = "1.6.10"
+    gradle_version = '7.1.2'
 
 
     compileSdkVersion = 30
-    buildToolsVersion = "30.0.2"
     minSdkVersion = 24
     targetSdkVersion = 29
     // 用一个本地安装的版本，也可以改成自己 PC 上的版本
