--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         ndk {
-            abiFilters 'armeabi-v7a'
+            abiFilters "${ext.abi}"
         }
     }
     buildTypes {
@@ -56,14 +56,14 @@ dependencies {
 
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation 'com.zhihu.android:matisse:0.5.3-beta3'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'commons-io:commons-io:20030203.000550'
 //    implementation 'com.exozet:transcoder:1.5.1'
-    implementation 'com.alibaba:fastjson:1.2.66'
+    implementation 'com.alibaba:fastjson:1.2.79'
     implementation 'cn.jzvd:jiaozivideoplayer:7.0.5'
     implementation 'com.moos:Material-ProgressView:1.0.6'
 
