--- a/libs.gradle
+++ b/libs.gradle
@@ -1,15 +1,18 @@
 ext {
-    core_ktx = '1.6.0'
-    appcompat = '1.3.0'
-    constraintlayout = "2.0.4"
+    core_ktx = '1.7.0'
+    appcompat = '1.4.0'
+    constraintlayout = "2.1.0"
 
     kotlin_version = "1.6.10"
     gradle_version = '7.1.2'
 
 
-    compileSdkVersion = 30
+    compileSdkVersion = 31
     minSdkVersion = 24
     targetSdkVersion = 29
     // 用一个本地安装的版本，也可以改成自己 PC 上的版本
     ndkVersion = "21.3.6528147"
+
+//    abi = "arm64-v8a"
+    abi = "armeabi-v7a"
 }
